--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -102,6 +102,7 @@ a {
 	
 header {
 	display: flex;
+	align-items: flex-start;
 	justify-content: space-between;
 }
 .inovation {
@@ -109,55 +110,50 @@ header {
 	justify-content: space-between;
 	font-size: 40px;
 	padding: 20px;
+	
   }
+
 button {
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
-	margin: 25px auto;
+	margin: 20px auto;
 	padding: 10px;
+	
 }
 
-.introduction {
-	border-top: 50px;
-	margin-bottom: 80px;
-	justify-content: space-between;
-
-}
 .middle-content{
 	box-sizing: border-box;
 	display: flex;
 	justify-content: space-around;
+	align-items: center;
+	padding: 50px;
+	margin: 0 auto;
+	
 		
 }
 .middle-image {
 	display: block;
-	box-sizing: border-box;
-	margin-left: auto;
-	margin-right: auto;
-	width: 50%;
-
+	width: 70%;
+	padding: 30px;
+	height: 20px;
 }
 .content1 {
-  text-align: center;
-  display: inline-block;
-  box-sizing: border-box;
-  font-family: 'Turret Road';
-  font-size: 45px;
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
   margin: 50px;
-  padding: 200px;
+  padding: 100px;
   
 }
-h2 {
-	display: flex;
-	justify-content: space-around;
-}
 .content2 {
-	box-sizing: border-box;
-	display:inline-block;
-	width: 250px;
-	height: 100px;
-	padding: 30 30 0 0;
+	display:flex;
+	align-items: center;
+	justify-content: space-around;
+	width: 100px;
+	height: 50px;
+	padding: 50px;
+	margin: 0 auto;
 	
 }
 footer{
