--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -109,10 +109,8 @@ header {
 	display: flex;
 	justify-content: space-between;
 	font-size: 40px;
-	padding: 20px;
-	
+	padding: 20px;	
   }
-
 button {
 	display: flex;
 	align-items: center;
@@ -121,16 +119,13 @@ button {
 	padding: 10px;
 	
 }
-
 .middle-content{
 	box-sizing: border-box;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	padding: 50px;
-	margin: 0 auto;
-	
-		
+	margin: 0 auto;		
 }
 .middle-image {
 	display: block;
@@ -140,32 +135,32 @@ button {
 }
 .content1 {
   display: flex;
-  align-items: center;
-  flex-direction: row-reverse;
+  justify-content: space-around;
   margin: 50px;
   padding: 100px;
   
 }
 .content2 {
-	display:flex;
-	align-items: center;
-	justify-content: space-around;
-	width: 100px;
-	height: 50px;
+	display:inline-block;
 	padding: 50px;
-	margin: 0 auto;
-	
+	margin: 50px;
+	text-align: center;
+	position: relative;	
 }
 footer{
   line-height: 20px;
-  margin-bottom: 10px;
-  shape-rendering: geometricPrecision;
-  text-shadow: 10px;
+  margin: 30px;
+  padding: 30px;
+  height: 20px;
+  color: black;
+}
+address{
+	line-height: 40px;
+	text-align: left;
 }
 .copyright {
 	text-align: center;
 	margin-bottom: 50px;
-
 }
 
 
