--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -119,16 +119,16 @@ button {
 }
 .middle-content{
 	display: flex;
-	justify-content: space-around;
+    justify-content: space-around;
+    flex-direction: column;
 	align-items: center;
 	padding: 50px;
 	margin: 0 auto;		
 	text-align: center;
 }
-}
+
 .Content1 {
-  display: flex;
-  justify-content: space-between;
+  display: inline-block;
   padding: 10px;
   
 }
