--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -101,6 +101,10 @@ a {
 	text-align: center;
 
   }
+.inovation > h1{
+	display: flex;
+	flex-direction: column;
+}
 
   .header-img {
 	  width:40%;
@@ -131,8 +135,6 @@ a {
 	width:30%;
 }
 
-footer {
-	padding: 20px;
-}
+
 
 
