second page fixed

--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -26,12 +26,14 @@ time, mark, audio, video {
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display:block;
+	display: block;
 }
 body {
 	line-height: 1;
 }
-
+ol, ul {
+	list-style: none;
+}
 blockquote, q {
 	quotes: none;
 }
@@ -46,186 +48,132 @@ table {
 }
 
 /* Set every element's box-sizing to border-box */
-
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html, body {
     height: 100%;
-	font-family: 'Titillium Web', sans-serif;
-	
-	
+    font-family: 'Titillium Web', sans-serif;
 }
 
 h1, h2, h3, h4, h5 {
     font-family: 'Bangers', cursive;
     letter-spacing: 1px;
-	margin-bottom: 15px;
-	
+    margin-bottom: 15px;
 }
 
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
-
-body{
-	margin: auto;	
-	width: 900px;
-}
-
-.navigation{
-	display: flex;
-	flex-wrap: wrap;
-}
-
-nav a{
-	margin: 52px 15px 0 40px;
-	color: grey;
-	font-size: 18px;
-	text-decoration: none;
-	display: flex;
-	align-items: center;
-}
-
-img{
-	max-width: 100%;
-}
-
-p{
-	line-height: 16px;
-}
-
-a {
-	 line-height: 35px;
-	 margin-top: 20px;
-	 list-style-position: inside;
-  }
-
-.logo{
-	 margin: 20px 0 0 100px;
-	 padding-top: 20px;
-  }
-
-header {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: space-around;
-	margin: 50px 0 50px 0;	
-}
-
-.services{
-	margin: 30px 0 0 30px;
-}
-
- h1{
-	font-size: 24px;
-}
-
-button{
-	margin-top: 20px;
-	font-size: 12px;
-	padding: 7px 20px 7px 20px;
-	border: 1px solid black;
-	border-radius: 5px;
-}
-
-.boxes{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content:space-between;
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
-	margin: 30px;
-	padding-bottom: 40px;
-}
-
-.box1{
-	margin: 40px 0 0 0;
-	padding: 20px;
-	background: lightgrey;
-	border: 1px solid black;
-	width: 400px;
-}
-
-.p {
-	line-height: 16px;
-}
-
-.button{
-	display: flex;
-	justify-content: space-between;
-	margin: 40px 0 40px 0;
-}
-
-.box2{
-	margin: 40px 0 0 0;
-	padding: 20px;
-	background: lightgrey;
-	border: 1px solid black;
-	width: 400px;
-}
-
-.box3{
-	margin: 40px 0 0 0;
-	padding: 20px;
-	background: lightgrey;
-	border: 1px solid black;
-	width: 400px;
-}
-
-.box4{
-	margin: 40px 0 0 0;
-	padding: 20px;
-	background: lightgrey;
-	border: 1px solid black;
-	width: 400px;
-}
-
-.box5{
-	margin: 40px 0 0 0;
-	padding: 20px;
-	background: lightgrey;
-	border: 1px solid black;
-	width: 400px;
-}
-
-.infoservices{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	margin: 30px;
-	width: 400px;
-	
-}
-
-.services-info-img{
-	width: 400px;
-	display: flex;
-	justify-content: space-between;
-	
-}
-.copyright {
+h1 {
 	text-align: center;
+	font-size: 75px;
+	padding: 0px 20px;
+	margin-bottom: 24px;
+}
+
+h2 {
+	font-size: 16px;
+	text-align: left;
+}
+
+p {
+	line-height: 1.1;
+	font-size: 16px;
+	text-align: left;
+}
+
+.container {
+	width: 950px;
+	margin: 0 auto;
+}
+
+header{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+nav {
+	width: 65%;
+	margin: 40px;
+	display: flex;
+	justify-content: space-between;
+}
+
+nav a {
+	text-decoration: none;
+	color: rgb(173, 172, 173);
 	font-size: 14px;
-	margin-top: 50px;
-  }
+	padding: 0px, 5px;
+}
 
-  address {
-	margin-bottom: 20px;
+.logo {
+	padding: 20px 40px 20px 20px;;
+}
 
-  }
+.top-content {
+	border-bottom: 1px solid black;
+	margin: 30px;;
+	display: flex;
+	justify-content: space-evenly;
+}
 
-  footer {
-	margin: 20px 30px 80px 30px;
-  }
+.top-content-text {
+	margin: 70px;
+	text-align: center;
+}
 
-  ul{
-	  list-style-type: square;
-	  list-style-position: inside;
-	  line-height: 30px;
-	  margin-top: 20px;
-  }
+.top-content-text a{
+	font-size: 16px;
+	text-align: center;
+	text-decoration: none;
+	color: rgb(173, 172, 173);
+	border: 1px solid black;
+	padding: 5px 45px;
+}
 
+.circleImg {
+	height: 400px;
+	margin-bottom: 65px;
+}
 
+.second-content {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	padding: 10px;
+}
 
+.features, .about {
+	width: calc(50% - 48px);
+}
+
+.middle-img {
+	padding: 25px; 
+	margin-left: 10px;
+}
+.third-content {
+	border-bottom: 1px solid black;
+	display: flex;
+	justify-content: space-evenly;
+	padding: 2px 10px 35px 20px;
+}
+
+.services, .product, .vision {
+	width: calc(33%- 40px);
+	margin: 15px;
+}
+
+.bottom-content {
+	margin: 40px ;
+}
+
+footer {
+	display: flex;
+	justify-content: center;
+	padding: 20px;
+}
+
+footer p{
+	font-size: 14px;
+}
 
