--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -177,7 +177,7 @@ footer p{
 	font-size: 14px;
 }
 
-/* .................Service Page................ */
+/* ........Service Second Page......... */
 
 .services-header-img {
 	margin-left: 20px;
